--- a/configs/fuzzel/fuzzel.ini
+++ b/configs/fuzzel/fuzzel.ini
@@ -1,21 +1,57 @@
-dpi-aware=no
-icon-theme=Papirus-Dark
-width=25
-font=JetBrainsMono Nerd:weight=bold:size=12
-line-height=50
-fields=name,generic,comment,categories,filename,keywords
-terminal=foot -e
-prompt="❯   "
+[main]
+terminal= ghostty -e
+icon-theme = Adwaita
+prompt="❯  "
+lines=15
+width=50
+horizontal-pad=50
+vertical-pad=30
+inner-pad=8
+font=JetBrainsMono Nerd Font:size=8:weight=medium
 show-actions=yes
-exit-on-keyboard-focus-loss=no
+layer=overlay
+anchor=center
+fields=filename,name,generic
+case-sensitive=no
+exit-on-keyboard-focus-loss = yes
+filter-desktop=yes
+launch-immediately=no
+icons-enabled=yes
+icon-size=24
+fuzzy=yes
+password-character=*
 
 [colors]
-background=282a36fa
-selection=3d4474fa
-border=fffffffa
+background=141420ff
+text=cdd6f4ff
+match=f38ba8ff
+selection=313244ff
+selection-text=cdd6f4ff
+selection-match=f9e2afff
+border=b4befeff
 
 [border]
-radius=20
+width=1
+radius=0
 
 [dmenu]
-exit-immediately-if-empty=yes
+exit-immediately-if-empty=no
+prompt="❯ "
+case-sensitive=no
+
+[key-bindings]
+cancel=Escape Control+c Control+g
+execute=Return KP_Enter Control+m
+execute-in-terminal=Control+Return Control+KP_Enter
+cursor-up=Up Control+k Control+p
+cursor-down=Down Control+j Control+n
+page-up=Page_Up Control+u
+page-down=Page_Down Control+d
+delete-line=Control+a
+delete-word=Control+w
+cursor-home=Home Control+a
+cursor-end=End Control+e
+
+[text-input]
+placeholder-text=Type to search...
+cursor=yes
